syntax = "proto3";

package github.com.norovone.bigtech_go_msa_hw.auth;

option go_package = "auth/api;auth";

// Запрос для регистрации
message RegisterRequest {
  string email = 1;
  string password = 2;
}

// Ответ на регистрацию
message RegisterResponse {
  string user_id = 1;
}

// Запрос для логина
message LoginRequest {
  string email = 1;
  string password = 2;
}

// Ответ на логин
message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  string user_id = 3;
}

// Запрос для обновления токенов
message RefreshRequest {
  string refresh_token = 1;
}

// Ответ на обновление токенов
message RefreshResponse {
  string access_token = 1;
  string refresh_token = 2;
  string user_id = 3;
}

// Перечисление ошибок
enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;
  ERROR_CODE_ALREADY_EXISTS = 1;
  ERROR_CODE_INVALID_ARGUMENT = 2;
  ERROR_CODE_UNAUTHENTICATED = 3;
  ERROR_CODE_INTERNAL = 4;
}

// Сообщение об ошибке для детализированного ответа
message Error {
  ErrorCode code = 1;
  string message = 2;
  map<string, string> details = 3;
}